--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-coffee": "~0.10.1"
+    "grunt-contrib-coffee": "~0.10.1",
+
+    "passport": "~0.1.16",
+    "passport-local": "~0.1.6",
+    "bcrypt": "~0.7.6"
   },
   "scripts": {
     "start": "node app.js",
